<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2018 Fabien Boismoreau
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ScoreActivity">

    <data>

        <variable
            name="viewModelConfiguration"
            type="com.bwaim.scorekeeper.configuration.ConfigurationViewModel" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@drawable/gradient">

        <TextView
            android:id="@+id/timer"
            style="@style/teamStyle.Timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/layoutMargin"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@{viewModelConfiguration.mTime}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/timerStart" />

        <Button
            android:id="@+id/startPauseButton"
            style="@style/buttonStyle"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/layoutMargin"
            android:layout_marginBottom="8dp"
            android:text="@{viewModelConfiguration.mStartPauseButtonLabelId.intValue()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/newProgram"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer"
            tools:text="@string/start" />

        <Button
            android:id="@+id/newProgram"
            style="@style/buttonStyle"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/layoutMargin"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/startPauseButton"
            app:layout_constraintTop_toBottomOf="@+id/timer" />

    </android.support.constraint.ConstraintLayout>

</layout>