<!--
  ~    Copyright 2018 Fabien Boismoreau
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Score Keeper</string>
    <string name="teamA">Coder A</string>
    <string name="reset">New Program</string>
    <string name="beginScore">25</string>
    <string name="error1">Syntax error</string>
    <string name="error2">Logic error</string>
    <string name="error3">Virus attack</string>
    <string name="teamB">Coder B</string>
    <string name="timerStart">01:30</string>
    <string name="start">Start!</string>
    <string name="pause">Pause</string>
    <string name="resultWin">%1$s wins!</string>
    <string name="draw">Draw !</string>
</resources>
